--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "url": "https://github.com/mohitbhusal11/backend-learning-node/issues"
   },
   "homepage": "https://github.com/mohitbhusal11/backend-learning-node#readme",
-  "description": ""
+  "description": "I'm going to push everything while learning backend"
 }
